[WiP] append messages to redis set

--- a/.jshintrc
+++ b/.jshintrc
@@ -23,5 +23,7 @@
   "supernew"      : false,
   "sub"           : true,
   "undef"         : true,
-  "white"         : true
+  "white"         : true,
+  "browser"       : true,
+  "globals": { "$": true, "io": true }
 }
