--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "dependencies": {
     "chalk": "^1.0.0",
     "hapi": "^8.6.x",
+    "hiredis": "^0.4.0",
+    "hoek": "^2.14.0",
+    "redis": "^0.12.1",
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5",
     "terminate": "^1.0.5",
@@ -33,7 +36,6 @@
     "codeclimate-test-reporter": "0.0.4",
     "jshint": "^2.7.0",
     "pre-commit": "1.0.6",
-    "hapi": "^8.6.1",
     "istanbul": "^0.3.17",
     "jsdoc": "^3.3.2",
     "nodemon": "^1.3.7",
