adds redis_connection (RedisCloud) test

--- a/package.json
+++ b/package.json
@@ -45,13 +45,12 @@
   },
   "scripts": {
     "start": "./node_modules/.bin/nodemon ./server.js",
-    "faster": "DEV=1 bin/faster.js",
-    "nocov": "tape ./test/*.js",
-    "test": "istanbul cover tape ./test/*.js",
+    "nocov": "node ./test/*.js",
+    "test": "istanbul cover ./test/*.js",
     "coverage": "istanbul check-coverage --statements 100 --functions 100 --lines 100 --branches 100",
     "jshint": "jshint -c .jshintrc --exclude-path .gitignore .",
     "codeclimate": "CODECLIMATE_REPO_TOKEN=9825169f8f3a0bdf7351a71da9474c212e819bf0ea6fed60b57be83ff53e9459 ./node_modules/codeclimate-test-reporter/bin/codeclimate.js < ./coverage/lcov.info",
-    "spec": "node tape ./test/*.js | node_modules/tap-spec/bin/cmd.js"
+    "docs": "./node_modules/jsdoc/jsdoc.js change.js"
   },
   "pre-commit": [
     "jshint",
