name required before posting messages. https://github.com/nelsonic/hapi-socketio-redis-chat-example/issues/2

--- a/.jshintrc
+++ b/.jshintrc
@@ -25,5 +25,5 @@
   "undef"         : true,
   "white"         : true,
   "browser"       : true,
-  "globals": { "$": true, "io": true }
+  "globals": { "$": true, "io": true, "Cookies": true }
 }
