love it when someone has already asked/answered my questions! http://stackoverflow.com/questions/4441798

--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "chat",
     "real-time",
     "socket.io",
-    "redis"
+    "redis",
+    "pubsub",
+    "publish",
+    "subscribe",
+    "scalable"
   ],
   "author": "@nelsonic",
   "license": "GPL-2.0",
