pretty much ready to give up on Lab as test runner... :-( https://github.com/dwyl/hapi-socketio-redis-chat-example/issues/5

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "docs": "./node_modules/jsdoc/jsdoc.js ./lib/*.js",
     "nocov": "./node_modules/lab/bin/lab",
     "test": "./node_modules/lab/bin/lab -c -r 'console'",
-    "coverage": "./node_modules/lab/bin/lab -r html -o ./test/coverage.html && ./node_modules/lab/bin/lab -r lcov -o ./test/lcov.info",
+    "human": "./node_modules/lab/bin/lab -r html -o ./test/coverage.html",
+    "coverage": "./node_modules/lab/bin/lab -r lcov -o ./test/lcov.info",
     "codeclimate": "CODECLIMATE_REPO_TOKEN=c1fd44b286100ffb10e243fd0a8efb7421adbfa77bb0198c8fce92e0baeb55bf ./node_modules/codeclimate-test-reporter/bin/codeclimate.js < ./test/lcov.info",
     "open-coverage": "open ./test/coverage.html",
     "jshint": "jshint -c .jshintrc --exclude-path .gitignore .",
