--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hapi-socketio-redis-chat-example",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "Real-time Chat in Hapi.js & Socket.io with Redis Pub/Sub Backend for Linear Scalability",
   "main": "server.js",
   "repository": {
@@ -39,6 +39,7 @@
     "istanbul": "^0.3.17",
     "jsdoc": "^3.3.2",
     "jshint": "^2.8.0",
+    "nodemon": "^1.4.0",
     "pre-commit": "1.0.10",
     "tap-spec": "^4.0.2",
     "tape": "^4.0.0"
