--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "hapi": "^9.0.3",
     "hiredis": "^0.4.1",
+    "inert": "^3.0.1",
     "redis": "^0.12.1",
     "socket.io": "^1.3.6",
     "socket.io-client": "^1.3.6"
