--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hapi-socketio-redis-chat-example",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "Real-time Chat in Hapi.js & Socket.io with Redis Pub/Sub Backend for Linear Scalability",
   "main": "server.js",
   "repository": {
@@ -31,6 +31,7 @@
     "hiredis": "^0.4.1",
     "inert": "^3.0.1",
     "redis": "^0.12.1",
+    "redis-connection": "^1.0.3",
     "socket.io": "^1.3.6",
     "socket.io-client": "^1.3.6"
   },
