--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: node_js
 node_js:
-  - 0.12
-services:
-  - redis-server
+  - "4.1"
 before_install:
   - pip install --user codecov
 after_success:
-  - codecov
+  - codecov --file coverage/lcov.info --disable search
