--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
   - "4.1"
+services:
+  - redis-server
 before_install:
   - pip install --user codecov
 after_success:
