--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "retest": "PORT=8000 node_modules/.bin/nodemon ./node_modules/.bin/istanbul cover ./node_modules/tape/bin/tape ./test/*.js | node_modules/tap-spec/bin/cmd.js",
     "relint": "node_modules/.bin/nodemon node_modules/.bin/goodparts lib",
     "spec": "PORT=8000 node ./node_modules/tape/bin/tape ./test/*.js | node_modules/tap-spec/bin/cmd.js",
-    "start": "PORT=8000 ./node_modules/.bin/nodemon ./server.js"
+    "start": "PORT=8000 ./node_modules/.bin/nodemon ./server.js",
+    "elm": "elm-live ./elm/src/Main.elm --dir=./elm --output=./elm/js/app.js"
   },
   "pre-commit": [
     "lint",
