--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "spec": "PORT=8000 node ./node_modules/tape/bin/tape ./test/*.js | node_modules/tap-spec/bin/cmd.js",
     "start": "PORT=8000 ./node_modules/.bin/nodemon ./server.js",
     "elm": "elm-live ./elm/src/Main.elm --dir=./elm --output=./elm/js/app.js",
-    "elm-dev": "elm-live ./elm/src/Main.elm --dir=./elm --output=./elm/js/app.js --debug --open"
+    "elm-dev": "elm-live ./elm/src/Main.elm --dir=./elm --output=./elm/js/app.js --debug --open --port=4000"
 
   },
   "pre-commit": [
